// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleClientPresentationManager addon results conversion to Presentation objects returns child nodes 1`] = `
Array [
  Object {
    "key": Object {
      "instanceKey": Object {
        "className": "Small Soft Shoes",
        "id": "0x1277d00000137b1",
      },
      "pathFromRoot": Array [
        "p1",
      ],
      "type": "ECInstanceNode",
    },
    "label": "test2",
  },
  Object {
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p3",
      ],
      "type": "type 2",
    },
    "label": "test3",
  },
]
`;

exports[`SingleClientPresentationManager addon results conversion to Presentation objects returns content 1`] = `
Content {
  "contentSet": Array [
    Item {
      "classInfo": Object {
        "id": "0x9a00000000eb1f",
        "label": "Global Indian Rupee Ngultrum Handcrafted Wooden Sausages",
        "name": "Incredible Granite Mouse",
      },
      "displayValues": Object {
        "Chief": "seamless Dynamic SDD",
      },
      "imageId": "c048034f-eb92-42b1-9433-9ad744e4cb9f",
      "label": "Buckinghamshire unleash Group",
      "mergedFieldNames": Array [],
      "primaryKeys": Array [
        Object {
          "className": "user-facing",
          "id": "0xae1e000000c8fa",
        },
      ],
      "values": Object {
        "Chief": "ROI circuit",
      },
    },
  ],
  "descriptor": Descriptor {
    "contentFlags": 0,
    "displayType": "vel sunt velit",
    "fields": Array [
      PropertiesField {
        "category": Object {
          "description": "Voluptas quibusdam et eaque et eum.",
          "expand": false,
          "label": "Future",
          "name": "Executive",
          "priority": 94352,
        },
        "isReadonly": true,
        "label": "Avon",
        "name": "Chief",
        "priority": 9199,
        "properties": Array [
          Object {
            "property": Object {
              "classInfo": Object {
                "id": "0x13a440000012051",
                "label": "open architecture stable",
                "name": "Cotton",
              },
              "name": "zero administration",
              "type": "string",
            },
            "relatedClassPath": Array [],
          },
        ],
        "type": Object {
          "typeName": "string",
          "valueFormat": "Primitive",
        },
      },
    ],
    "selectClasses": Array [
      Object {
        "isSelectPolymorphic": true,
        "pathToPrimaryClass": Array [],
        "relatedPropertyPaths": Array [],
        "selectClassInfo": Object {
          "id": "0x425e000000f0fd",
          "label": "Developer driver infrastructure",
          "name": "withdrawal",
        },
      },
    ],
  },
}
`;

exports[`SingleClientPresentationManager addon results conversion to Presentation objects returns content descriptor 1`] = `
Descriptor {
  "connectionId": "be18bdbf-5395-4cc9-b81c-73d4d84c24fe",
  "contentFlags": 0,
  "contentOptions": "bar",
  "displayType": "leverage",
  "fields": Array [
    PropertiesField {
      "category": Object {
        "description": "Inventore illum optio voluptatem doloremque corrupti facere doloremque velit.",
        "expand": true,
        "label": "strategy Technician",
        "name": "Investor",
        "priority": 26294,
      },
      "editor": Object {
        "name": "Metal",
        "params": Object {
          "some_param": 49320,
        },
      },
      "isReadonly": false,
      "label": "grey",
      "name": "Primitive property field with editor",
      "priority": 93919,
      "properties": Array [
        Object {
          "property": Object {
            "classInfo": Object {
              "id": "0x175f0000000fe57",
              "label": "Knoll",
              "name": "Executive",
            },
            "enumerationInfo": Object {
              "choices": Array [
                Object {
                  "label": "ivory",
                  "value": "73390ce7-3e55-4038-a8e7-fe72d44d6638",
                },
                Object {
                  "label": "content-based Cambridgeshire Tactics",
                  "value": "934f8977-ba27-499a-b652-f285837e6e74",
                },
              ],
              "isStrict": false,
            },
            "name": "synthesize",
            "type": "string",
          },
          "relatedClassPath": Array [],
        },
      ],
      "type": Object {
        "typeName": "string",
        "valueFormat": "Primitive",
      },
    },
    PropertiesField {
      "category": Object {
        "description": "Velit beatae perspiciatis necessitatibus quia debitis sunt aliquid.",
        "expand": true,
        "label": "Refined Branch",
        "name": "Way",
        "priority": 85483,
      },
      "isReadonly": false,
      "label": "Soft deposit deposit",
      "name": "Complex array of structs property field",
      "priority": 87868,
      "properties": Array [
        Object {
          "property": Object {
            "classInfo": Object {
              "id": "0x776b0000011827",
              "label": "enhance",
              "name": "capacitor",
            },
            "kindOfQuantity": Object {
              "currentFusId": "00ad31bd-0be3-4f93-9a59-60e158871d62",
              "label": "Circle responsive wireless",
              "name": "mission-critical",
              "persistenceUnit": "revolutionary",
            },
            "name": "Gibraltar Pound",
            "type": "double",
          },
          "relatedClassPath": Array [],
        },
      ],
      "type": Object {
        "memberType": Object {
          "members": Array [
            Object {
              "label": "synthesizing",
              "name": "Concrete",
              "type": Object {
                "typeName": "string",
                "valueFormat": "Primitive",
              },
            },
            Object {
              "label": "withdrawal Incredible",
              "name": "invoice",
              "type": Object {
                "memberType": Object {
                  "typeName": "string",
                  "valueFormat": "Primitive",
                },
                "typeName": "string[]",
                "valueFormat": "Array",
              },
            },
          ],
          "typeName": "SomeClass",
          "valueFormat": "Struct",
        },
        "typeName": "string[]",
        "valueFormat": "Array",
      },
    },
    NestedContentField {
      "category": Object {
        "description": "Dolores est quo quaerat.",
        "expand": false,
        "label": "USB Utah black",
        "name": "Rhode Island",
        "priority": 30795,
      },
      "contentClassInfo": Object {
        "id": "0xb7cf000000f6ac",
        "label": "invoice Internal Planner",
        "name": "European Unit of Account 17(E.U.A.-17)",
      },
      "isReadonly": true,
      "label": "orange Somali Shilling payment",
      "name": "Nested content field",
      "nestedFields": Array [
        Field {
          "category": Object {
            "description": "Autem deleniti esse error sequi.",
            "expand": false,
            "label": "program",
            "name": "Heard Island and McDonald Islands",
            "priority": 27350,
          },
          "isReadonly": true,
          "label": "Kenyan Shilling Computer payment",
          "name": "Simple property field",
          "priority": 89996,
          "type": Object {
            "typeName": "string",
            "valueFormat": "Primitive",
          },
        },
      ],
      "pathToPrimaryClass": Array [
        Object {
          "isForwardRelationship": true,
          "isPolymorphicRelationship": true,
          "relationshipInfo": Object {
            "id": "0x415000000127eb",
            "label": "Practical Frozen Car New Zealand Dollar",
            "name": "Plastic",
          },
          "sourceClassInfo": Object {
            "id": "0x17187000000cbe5",
            "label": "capacitor",
            "name": "bifurcated",
          },
          "targetClassInfo": Object {
            "id": "0x209e000000981a",
            "label": "Wooden",
            "name": "New Hampshire",
          },
        },
      ],
      "priority": 83323,
      "type": Object {
        "members": Array [
          Object {
            "label": "secondary platforms Data",
            "name": "Interactions",
            "type": Object {
              "typeName": "string",
              "valueFormat": "Primitive",
            },
          },
        ],
        "typeName": "Outdoors",
        "valueFormat": "Struct",
      },
    },
  ],
  "inputKeysHash": "b0e65557-f886-4b09-ba7d-c95c4308aedf",
  "selectClasses": Array [
    Object {
      "isSelectPolymorphic": true,
      "pathToPrimaryClass": Array [
        Object {
          "isForwardRelationship": false,
          "isPolymorphicRelationship": true,
          "relationshipInfo": Object {
            "id": "0x78e0000000eb0e",
            "label": "hierarchy bandwidth",
            "name": "Pakistan",
          },
          "sourceClassInfo": Object {
            "id": "0x10410000000a749",
            "label": "deposit holistic parallelism",
            "name": "Accountability",
          },
          "targetClassInfo": Object {
            "id": "0xa2c4000000cb78",
            "label": "California Future-proofed Throughway",
            "name": "efficient",
          },
        },
      ],
      "relatedPropertyPaths": Array [
        Array [
          Object {
            "isForwardRelationship": true,
            "isPolymorphicRelationship": false,
            "relationshipInfo": Object {
              "id": "0xbb1c0000009c13",
              "label": "redundant Division",
              "name": "back-end",
            },
            "sourceClassInfo": Object {
              "id": "0x157af000000cb19",
              "label": "Identity hack lime",
              "name": "Arkansas",
            },
            "targetClassInfo": Object {
              "id": "0x1427f00000095cf",
              "label": "cross-platform Concrete",
              "name": "Legacy",
            },
          },
        ],
      ],
      "selectClassInfo": Object {
        "id": "0xeb2c0000002865",
        "label": "methodologies Money Market Account",
        "name": "indexing",
      },
    },
  ],
}
`;

exports[`SingleClientPresentationManager addon results conversion to Presentation objects returns filtered node paths 1`] = `
Array [
  Object {
    "children": Array [],
    "index": 476,
    "isMarked": true,
    "node": Object {
      "backColor": "rgb(
    15,
    148,
    218
  )",
      "foreColor": "#7444AA",
      "hasChildren": true,
      "isCheckboxEnabled": true,
      "isCheckboxVisible": true,
      "isChecked": true,
      "isEditable": true,
      "isExpanded": true,
      "isSelectable": false,
      "key": Object {
        "instanceKey": Object {
          "className": "Switchable",
          "id": "0x3765000000f652",
        },
        "pathFromRoot": Array [
          "00acda35-77ce-4dc5-8aad-bf086235e7ed",
          "971578c3-3533-443e-9c1b-23111385d057",
        ],
        "type": "ECInstanceNode",
      },
      "label": "Centralized",
    },
  },
]
`;

exports[`SingleClientPresentationManager addon results conversion to Presentation objects returns node paths 1`] = `
Array [
  Object {
    "children": Array [],
    "index": 755,
    "isMarked": false,
    "node": Object {
      "hasChildren": false,
      "isCheckboxEnabled": true,
      "isCheckboxVisible": false,
      "isChecked": true,
      "isEditable": true,
      "isExpanded": true,
      "isSelectable": true,
      "key": Object {
        "instanceKey": Object {
          "className": "back-end",
          "id": "0x175610000013884",
        },
        "pathFromRoot": Array [
          "15ff141a-890d-48b9-90d2-42948cce9db4",
          "10ad4701-6603-44cc-9896-3c40aa38533b",
        ],
        "type": "ECInstanceNode",
      },
      "label": "Inverse Manager wireless",
    },
  },
]
`;

exports[`SingleClientPresentationManager addon results conversion to Presentation objects returns root nodes 1`] = `
Array [
  Object {
    "backColor": "backColor1",
    "description": "description1",
    "fontStyle": "fontStyle1",
    "foreColor": "foreColor1",
    "hasChildren": true,
    "imageId": "img_1",
    "isCheckboxEnabled": true,
    "isCheckboxVisible": true,
    "isChecked": true,
    "isEditable": true,
    "isExpanded": true,
    "isSelectable": true,
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p2",
        "p3",
      ],
      "type": "type1",
    },
    "label": "test1",
  },
  Object {
    "backColor": "",
    "description": "description2",
    "fontStyle": "",
    "foreColor": "",
    "hasChildren": false,
    "imageId": "",
    "isCheckboxEnabled": false,
    "isCheckboxVisible": false,
    "isChecked": false,
    "isEditable": false,
    "isExpanded": false,
    "isSelectable": false,
    "key": Object {
      "instanceKey": Object {
        "className": "Buckinghamshire",
        "id": "0xc132000000d7a4",
      },
      "pathFromRoot": Array [
        "p1",
      ],
      "type": "ECInstanceNode",
    },
    "label": "test2",
  },
  Object {
    "key": Object {
      "pathFromRoot": Array [
        "p1",
        "p3",
      ],
      "type": "some node",
    },
    "label": "test2",
  },
]
`;
